Réglage bug burger (invisible en mode desktop)

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -268,15 +268,104 @@ footer{
   }
   div#slider { overflow: hidden; margin: 0 auto; max-width: 100%;
   }
-  .menu
-  {
-  width: 80%;
-  }
   img{
   width: 90%;
   height: 90%;
   }
-  .menu .burger
+  header{
+    width:80%; 
+  }
+.material-icons
+{
+  font-size:24px;
+  margin-right:12px;
+  vertical-align:text-bottom;
+}
+
+.menu
+{
+  background:#3f51b5;
+  color:#fff;
+  height:50px;
+  
+}
+
+.menu .title
+{
+  font-size:30px;
+  font-weight:bold;
+  line-height:50px;
+  padding:0 20px;
+  text-transform:uppercase;
+  position: relative;
+}
+
+.menu nav
+{
+  background:inherit;
+  font-size:20px;
+  font-weight:bold;
+  height:0;
+  overflow:hidden;
+  text-transform:uppercase;
+  transition:height .2s;
+}
+
+.menu nav > *
+{
+  display:block;
+  z-index: 3;
+  letter-spacing:1px;
+  line-height:2.5;
+  padding:0 20px;
+  width:100%;
+}
+
+.menu nav input
+{
+  background:rgba(0,0,0,.2);
+  border:none;
+  color:#fff;
+}
+
+.menu .burger
+{
+  appearance:none;
+  -moz-appearance:none;
+  -webkit-appearance:none;
+  color:inherit;
+  cursor:pointer;
+  font-family:'Material Icons';
+  font-size:30px;
+  line-height:50px;
+  margin:0;
+  outline:0;
+  padding:0;
+  position:absolute;
+  text-align:center;
+  top:0;
+  right:20px;
+  width:50px;
+
+}
+
+.menu .burger:before
+{
+  content:'menu';
+}
+
+.menu .burger:checked:before
+{
+  content:'close';
+}
+
+.menu .burger:checked + nav
+{
+  height:calc(100vh - 50px);
+  z-index: 4;
+  position: relative;
+}
+  /*.menu .burger
   {
   appearance:none;
   -moz-appearance:none;
@@ -292,7 +381,7 @@ footer{
   text-align:center;
   top:0;
   width:50px;
-  }
+  }*/
 }
 /* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES */
 
@@ -321,3 +410,4 @@ form{
   display: flex;
   justify-content: space-around;
 }
+/* CONTACT *//* CONTACT *//* CONTACT */
